// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`records the production HTML normalization for cellRoles > cellRoles 1`] = `
{
  "html": "<table><tbody><tr><th>HEADER</th><td>DATA</td></tr></tbody></table>",
  "native": {
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "HEADER",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "DATA",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
  },
  "rendered": "<div class="tableWrapper"><table class="note-table" style="min-width: 50px;"><colgroup><col style="min-width: 25px;"><col style="min-width: 25px;"></colgroup><tbody><tr><th class="note-table-header" colspan="1" rowspan="1"><p>HEADER</p></th><td class="note-table-cell" colspan="1" rowspan="1"><p>DATA</p></td></tr></tbody></table></div>",
  "saved": "| HEADER | DATA |
| --- | --- |",
  "source": "<table><tr><th>HEADER</th><td>DATA</td></tr></table>",
}
`;

exports[`records the production HTML normalization for commentAnchorBeforeHtmlTable > commentAnchorBeforeHtmlTable 1`] = `
{
  "html": "<span data-anchor-id="comment-a:point" data-anchor-type="point" data-comment-id="comment-a"></span><p>&lt;table&gt;&lt;tr&gt;&lt;td&gt;x&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;</p>
<p><strong>After</strong></p>
",
  "native": {
    "content": [
      {
        "content": [
          {
            "text": "<table><tr><td>x</td></tr></table>",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "content": [
          {
            "marks": [
              {
                "type": "bold",
              },
            ],
            "text": "After",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
  },
  "rendered": "<p>&lt;table&gt;&lt;tr&gt;&lt;td&gt;x&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;</p><p><strong>After</strong></p>",
  "saved": "<table><tr><td>x</td></tr></table>

**After**",
  "source": "<!--anchor:comment-a:point-->

<table><tr><td>x</td></tr></table>

**After**",
}
`;

exports[`records the production HTML normalization for entitiesAndWhitespace > entitiesAndWhitespace 1`] = `
{
  "html": "<table><tbody><tr><td> A &amp; B🚀
  C	 D&nbsp;E<br>F </td></tr></tbody></table>",
  "native": {
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "A & B🚀 C D E",
                        "type": "text",
                      },
                      {
                        "type": "hardBreak",
                      },
                      {
                        "text": "F",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
  },
  "rendered": "<div class="tableWrapper"><table class="note-table" style="min-width: 25px;"><colgroup><col style="min-width: 25px;"></colgroup><tbody><tr><td class="note-table-cell" colspan="1" rowspan="1"><p>A &amp; B🚀 C D&nbsp;E<br>F</p></td></tr></tbody></table></div>",
  "saved": "| A &amp; B🚀 C D E<br>F |
| --- |",
  "source": "<table><tr><td> A &amp; B&#x1f680;
  C	 D&nbsp;E<br>F </td></tr></table>",
}
`;

exports[`records the production HTML normalization for htmlTableBeforeBacktickTail > htmlTableBeforeBacktickTail 1`] = `
{
  "html": "<table><tbody><tr><td>x</td></tr></tbody></table>

\`After\`",
  "native": {
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "x",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
      {
        "content": [
          {
            "text": " \`After\`",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
  },
  "rawBacktickRange": {
    "end": 43,
    "start": 36,
  },
  "rendered": "<div class="tableWrapper"><table class="note-table" style="min-width: 25px;"><colgroup><col style="min-width: 25px;"></colgroup><tbody><tr><td class="note-table-cell" colspan="1" rowspan="1"><p>x</p></td></tr></tbody></table></div><p> \`After\`</p>",
  "saved": "| x |
| --- |

 \`After\`",
  "source": "<table><tr><td>x</td></tr></table>

\`After\`",
  "textPositions": [
    {
      "marks": [],
      "position": 4,
      "text": "x",
    },
    {
      "marks": [],
      "position": 10,
      "text": " \`After\`",
    },
  ],
}
`;

exports[`records the production HTML normalization for htmlTableBeforeMarkdown > htmlTableBeforeMarkdown 1`] = `
{
  "html": "<table><tbody><tr><td>x</td></tr></tbody></table>

**After**",
  "native": {
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "x",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
      {
        "content": [
          {
            "text": " **After**",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
  },
  "rendered": "<div class="tableWrapper"><table class="note-table" style="min-width: 25px;"><colgroup><col style="min-width: 25px;"></colgroup><tbody><tr><td class="note-table-cell" colspan="1" rowspan="1"><p>x</p></td></tr></tbody></table></div><p> **After**</p>",
  "saved": "| x |
| --- |

 **After**",
  "source": "<table><tr><td>x</td></tr></table>

**After**",
}
`;

exports[`records the production HTML normalization for implicitBodiesAndEnds > implicitBodiesAndEnds 1`] = `
{
  "html": "<table><tbody><tr><td>ONE</td><td>TWO</td></tr><tr><td>THREE</td></tr></tbody></table>",
  "native": {
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "ONE",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "TWO",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "THREE",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
  },
  "rendered": "<div class="tableWrapper"><table class="note-table" style="min-width: 50px;"><colgroup><col style="min-width: 25px;"><col style="min-width: 25px;"></colgroup><tbody><tr><td class="note-table-cell" colspan="1" rowspan="1"><p>ONE</p></td><td class="note-table-cell" colspan="1" rowspan="1"><p>TWO</p></td></tr><tr><td class="note-table-cell" colspan="1" rowspan="1"><p>THREE</p></td></tr></tbody></table></div>",
  "saved": "| ONE | TWO |
| --- | --- |
| THREE |",
  "source": "<table><tr><td>ONE<td>TWO<tr><td>THREE</table>",
}
`;

exports[`records the production HTML normalization for malformedSpans > malformedSpans 1`] = `
{
  "html": "<table><tbody><tr><td>ZERO</td><td>BAD</td></tr></tbody></table>",
  "native": {
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "ZERO",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "BAD",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
  },
  "rendered": "<div class="tableWrapper"><table class="note-table" style="min-width: 50px;"><colgroup><col style="min-width: 25px;"><col style="min-width: 25px;"></colgroup><tbody><tr><td class="note-table-cell" colspan="1" rowspan="1"><p>ZERO</p></td><td class="note-table-cell" colspan="1" rowspan="1"><p>BAD</p></td></tr></tbody></table></div>",
  "saved": "| ZERO | BAD |
| --- | --- |",
  "source": "<table><tr><td rowspan="0" colspan="-2">ZERO</td><td rowspan="wat" colspan="999999999999999999999">BAD</td></tr></table>",
}
`;

exports[`records the production HTML normalization for markdownBeforeAndAfterHtmlTable > markdownBeforeAndAfterHtmlTable 1`] = `
{
  "html": "<h2>Before</h2>
<p>&lt;table&gt;&lt;tr&gt;&lt;td&gt;x&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;</p>
<p><strong>After</strong></p>
",
  "native": {
    "content": [
      {
        "attrs": {
          "level": 2,
        },
        "content": [
          {
            "text": "Before",
            "type": "text",
          },
        ],
        "type": "heading",
      },
      {
        "content": [
          {
            "text": "<table><tr><td>x</td></tr></table>",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "content": [
          {
            "marks": [
              {
                "type": "bold",
              },
            ],
            "text": "After",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
  },
  "rendered": "<h2>Before</h2><p>&lt;table&gt;&lt;tr&gt;&lt;td&gt;x&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;</p><p><strong>After</strong></p>",
  "saved": "## Before

<table><tr><td>x</td></tr></table>

**After**",
  "source": "## Before

<table><tr><td>x</td></tr></table>

**After**",
}
`;

exports[`records the production HTML normalization for markdownBeforeHtmlBacktickTail > markdownBeforeHtmlBacktickTail 1`] = `
{
  "html": "<h2>Before</h2>
<p>&lt;table&gt;&lt;tr&gt;&lt;td&gt;x&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;</p>
<p><code>After</code></p>
",
  "native": {
    "content": [
      {
        "attrs": {
          "level": 2,
        },
        "content": [
          {
            "text": "Before",
            "type": "text",
          },
        ],
        "type": "heading",
      },
      {
        "content": [
          {
            "text": "<table><tr><td>x</td></tr></table>",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "content": [
          {
            "marks": [
              {
                "type": "code",
              },
            ],
            "text": "After",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
  },
  "rawBacktickRange": {
    "end": 54,
    "start": 47,
  },
  "rendered": "<h2>Before</h2><p>&lt;table&gt;&lt;tr&gt;&lt;td&gt;x&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;</p><p><code spellcheck="false">After</code></p>",
  "saved": "## Before

<table><tr><td>x</td></tr></table>

\`After\`",
  "source": "## Before

<table><tr><td>x</td></tr></table>

\`After\`",
  "textPositions": [
    {
      "marks": [],
      "position": 1,
      "text": "Before",
    },
    {
      "marks": [],
      "position": 9,
      "text": "<table><tr><td>x</td></tr></table>",
    },
    {
      "marks": [
        "code",
      ],
      "position": 45,
      "text": "After",
    },
  ],
}
`;

exports[`records the production HTML normalization for markdownCrLfHtmlBlock > markdownCrLfHtmlBlock 1`] = `
{
  "html": "<h2>Before</h2>
<p>&lt;div&gt;one<br>two&lt;/div&gt;</p>
",
  "native": {
    "content": [
      {
        "attrs": {
          "level": 2,
        },
        "content": [
          {
            "text": "Before",
            "type": "text",
          },
        ],
        "type": "heading",
      },
      {
        "content": [
          {
            "text": "<div>one",
            "type": "text",
          },
          {
            "type": "hardBreak",
          },
          {
            "text": "two</div>",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
  },
  "rendered": "<h2>Before</h2><p>&lt;div&gt;one<br>two&lt;/div&gt;</p>",
  "saved": "## Before

<div>one
two</div>",
  "source": "## Before

<div>one
two</div>",
}
`;

exports[`records the production HTML normalization for markdownInsideHtmlBlock > markdownInsideHtmlBlock 1`] = `
{
  "html": "<h2>Before</h2>
<p>&lt;div&gt;<strong>bold</strong> <code>code</code> &amp; * &lt;/div&gt;</p>
",
  "native": {
    "content": [
      {
        "attrs": {
          "level": 2,
        },
        "content": [
          {
            "text": "Before",
            "type": "text",
          },
        ],
        "type": "heading",
      },
      {
        "content": [
          {
            "text": "<div>",
            "type": "text",
          },
          {
            "marks": [
              {
                "type": "bold",
              },
            ],
            "text": "bold",
            "type": "text",
          },
          {
            "text": " ",
            "type": "text",
          },
          {
            "marks": [
              {
                "type": "code",
              },
            ],
            "text": "code",
            "type": "text",
          },
          {
            "text": " & * </div>",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
  },
  "rendered": "<h2>Before</h2><p>&lt;div&gt;<strong>bold</strong> <code spellcheck="false">code</code> &amp; * &lt;/div&gt;</p>",
  "saved": "## Before

<div>**bold** \`code\` & * </div>",
  "source": "## Before

<div>**bold** \`code\` &amp; \\* </div>",
}
`;

exports[`records the production HTML normalization for markdownMultilineHtmlBlock > markdownMultilineHtmlBlock 1`] = `
{
  "html": "<h2>Before</h2>
<p>&lt;div&gt;one<br>two&lt;/div&gt;</p>
",
  "native": {
    "content": [
      {
        "attrs": {
          "level": 2,
        },
        "content": [
          {
            "text": "Before",
            "type": "text",
          },
        ],
        "type": "heading",
      },
      {
        "content": [
          {
            "text": "<div>one",
            "type": "text",
          },
          {
            "type": "hardBreak",
          },
          {
            "text": "two</div>",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
  },
  "rendered": "<h2>Before</h2><p>&lt;div&gt;one<br>two&lt;/div&gt;</p>",
  "saved": "## Before

<div>one
two</div>",
  "source": "## Before

<div>one
two</div>",
}
`;

exports[`records the production HTML normalization for nestedTable > nestedTable 1`] = `
{
  "html": "<table><tbody><tr><td>OUTER<table><tbody><tr><th>INNER</th></tr></tbody></table>AFTER</td><td>LAST</td></tr></tbody></table>",
  "native": {
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "OUTER",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                  {
                    "content": [
                      {
                        "content": [
                          {
                            "attrs": {
                              "align": null,
                              "colspan": 1,
                              "colwidth": null,
                              "rowspan": 1,
                            },
                            "content": [
                              {
                                "content": [
                                  {
                                    "text": "INNER",
                                    "type": "text",
                                  },
                                ],
                                "type": "paragraph",
                              },
                            ],
                            "type": "tableHeader",
                          },
                        ],
                        "type": "tableRow",
                      },
                    ],
                    "type": "table",
                  },
                  {
                    "content": [
                      {
                        "text": "AFTER",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "LAST",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
  },
  "rendered": "<div class="tableWrapper"><table class="note-table" style="min-width: 50px;"><colgroup><col style="min-width: 25px;"><col style="min-width: 25px;"></colgroup><tbody><tr><td class="note-table-cell" colspan="1" rowspan="1"><p>OUTER</p><div class="tableWrapper"><table class="note-table" style="min-width: 25px;"><colgroup><col style="min-width: 25px;"></colgroup><tbody><tr><th class="note-table-header" colspan="1" rowspan="1"><p>INNER</p></th></tr></tbody></table></div><p>AFTER</p></td><td class="note-table-cell" colspan="1" rowspan="1"><p>LAST</p></td></tr></tbody></table></div>",
  "saved": "| OUTERINNERAFTER | INNER | LAST |
| --- | --- | --- |
| INNER |",
  "source": "<table><tr><td>OUTER<table><tr><th>INNER</th></tr></table>AFTER</td><td>LAST</td></tr></table>",
}
`;

exports[`records the production HTML normalization for retainedAttributes > retainedAttributes 1`] = `
{
  "html": "<table><tbody><tr><td><a href="https://example.test/long" title="tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt">LINK</a><img src="https://example.test/image.png" alt="ALT" title="IMAGE"></td></tr></tbody></table>",
  "native": {
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "marks": [
                          {
                            "attrs": {
                              "class": "text-primary-ink underline cursor-pointer",
                              "href": "https://example.test/long",
                              "rel": "noopener noreferrer nofollow",
                              "target": "_blank",
                            },
                            "type": "link",
                          },
                        ],
                        "text": "LINK",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                  {
                    "attrs": {
                      "alt": "ALT",
                      "height": null,
                      "mediaUnsupported": null,
                      "src": "https://example.test/image.png",
                      "title": "IMAGE",
                      "width": null,
                    },
                    "type": "image",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
  },
  "rendered": "<div class="tableWrapper"><table class="note-table" style="min-width: 25px;"><colgroup><col style="min-width: 25px;"></colgroup><tbody><tr><td class="note-table-cell" colspan="1" rowspan="1"><p><a href="https://example.test/long" target="_blank" rel="noopener noreferrer nofollow" class="text-primary-ink underline cursor-pointer">LINK</a></p><img class="note-image max-w-full rounded-md" src="https://example.test/image.png" alt="ALT" title="IMAGE"></td></tr></tbody></table></div>",
  "saved": "| LINK![ALT](https://example.test/image.png "IMAGE") |
| --- |",
  "source": "<table><tr><td><a href="https://example.test/long" title="tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt">LINK</a><img src="https://example.test/image.png" alt="ALT" title="IMAGE"></td></tr></table>",
}
`;

exports[`records the production HTML normalization for unsafeAttributes > unsafeAttributes 1`] = `
{
  "html": "<table><tbody><tr><td data-unknown="raw" title="cell"><a title="link">LINK</a>TEXT</td></tr></tbody></table>",
  "native": {
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "attrs": {
                  "align": null,
                  "colspan": 1,
                  "colwidth": null,
                  "rowspan": 1,
                },
                "content": [
                  {
                    "content": [
                      {
                        "text": "LINKTEXT",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
  },
  "rendered": "<div class="tableWrapper"><table class="note-table" style="min-width: 25px;"><colgroup><col style="min-width: 25px;"></colgroup><tbody><tr><td class="note-table-cell" colspan="1" rowspan="1"><p>LINKTEXT</p></td></tr></tbody></table></div>",
  "saved": "| LINKTEXT |
| --- |",
  "source": "<table onclick="alert(1)" style="color:red"><tr><td data-unknown="raw" title="cell" onmouseover="alert(2)"><a href="javascript:alert(3)" title="link">LINK</a><script>evil()</script><style>body{display:none}</style>TEXT</td></tr></table>",
}
`;
